data/derived/sp14/progs/unify/prog1262.ml.out
Characters 44-52:
  if n >0 then n/10::n mod 10
                     ^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
